--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - 7.3
 
 before_script:
+  - cd src
   - cp .env.travis .env
   - composer self-update
   - composer install --no-interaction
@@ -13,4 +14,4 @@ before_script:
 
 install: travis_retry composer install --no-interaction --prefer-source
 
-script: vendor/bin/phpunit --verbose
+script: src/vendor/bin/phpunit --verbose
