--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,13 +36,18 @@ services:
     volumes:
       - ./docker/database/data:/var/lib/mysql
       - ./docker/database/provision:/docker-entrypoint-initdb.d
-    environment:
-      MYSQL_ROOT_PASSWORD: eeJizah1
-      MYSQL_USER: 360_dev
-      MYSQL_PASSWORD: FjXS3YN7
-      MYSQL_DATABASE: 360_dev
     networks:
       - 360-network
+    env_file:
+        - .env
+
+  npm:
+    container_name: 360_npm
+    build:
+      context: .
+      dockerfile: ./docker/npm/Dockerfile
+    volumes:
+      - ./src:/usr/src/app
 
 
 networks:
